--- a/Week5/day2/trial.ipynb
+++ b/Week5/day2/trial.ipynb
@@ -1,13 +1,38 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d8b6078c-0956-46b7-9f73-c2d00db29f54",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import ssl\n",
+    "\n",
+    "ssl._create_default_https_context = ssl._create_unverified_context\n",
+    "\n",
+    "# URL of the dataset\n",
+    "url = \"https://raw.githubusercontent.com/justmarkham/DAT8/master/data/chipotle.tsv\"  # Replace with the actual URL\n",
+    "\n",
+    "# Use pandas to read the dataset from the URL\n",
+    "chipo = pd.read_csv(url, sep='\\t')\n",
+    "\n",
+    "# Now, 'chipo' contains your dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c4e9366-3709-45b9-9721-475e69e84568",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "29b0f9e9-29b3-46da-9cd3-0424801bf4ae",
    "metadata": {},
    "outputs": [],
    "source": []
